--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Gerzulet/preEntrega1Soto.git"
+    "url": "git+https://github.com/Tempra94/primerapracticaintegradora"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Gerzulet/preEntrega1Soto/issues"
+    "url": "https://github.com/Tempra94/primerapracticaintegradora/issues"
   },
-  "homepage": "https://github.com/Gerzulet/preEntrega1Soto#readme",
+  "homepage": "https://github.com/Tempra94/primerapracticaintegradora",
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
